# Photon-Commerce

./: .gitignore  .gitmodules  README.md  README_CN.md  project_context.txt
.github/workflows/: ci.yml
IDL/UserService/v1/: user_service.proto
UserService/: CMakeLists.txt  main.cc  vcpkg.json
UserService/adapter/include/: register_call_data.h
UserService/adapter/src/: register_call_data.cc
UserService/adapter/v1/include/: register_call_data.h
UserService/adapter/v1/src/: register_call_data.cc
UserService/adapter/v2/call_data/include/: get_user_info_call_data.h  login_by_code_call_data.h  login_by_password_call_data.h
UserService/adapter/v2/call_data/interface/: call_data.hpp  i_call_data.h
UserService/adapter/v2/call_data/src/: get_user_info_call_data.cc  login_by_code_call_data.cc  login_by_password_call_data.cc
UserService/adapter/v2/call_data_manager/include/: get_user_info_call_data_manager.h  login_by_code_call_data_manager.h  login_by_password_call_data_manager.h
UserService/adapter/v2/call_data_manager/src/: get_user_info_call_data_manager.cc  login_by_code_call_data_manager.cc  login_by_password_call_data_manager.cc  register_call_data_manager.cc
UserService/adapter/v2/include/: register_call_data.h
UserService/adapter/v2/interface/: i_call_data.hpp
UserService/adapter/v2/manager/: call_data_manager.hpp
UserService/adapter/v2/src/: register_call_data.cc
UserService/builtin_impl/: builtin_impl.cc
UserService/call_data/include/: register_call_data.h
UserService/call_data/interface/: i_call_data.h
UserService/call_data/src/: register_call_data.cc
UserService/config/: app_config.cc  app_config.h  config.yaml
UserService/db/include/: async_connection_pool.h  pq_connection.h
UserService/db/src/: async_connection_pool.cc  pq_connection.cc
UserService/domain/: user.cc  user.h
UserService/domain/interface/: i_user_repository.h  i_verification_code_repository.h
UserService/infrastructure/asio_thread_pool/: asio_thread_pool.cc  asio_thread_pool.h
UserService/infrastructure/domain_implement/include/: user_repository.h  verification_code_repository.h
UserService/infrastructure/domain_implement/src/: user_repository.cc  verification_code_repository.cc
UserService/infrastructure/persistence/dao/: user_dao.cc  user_dao.h
UserService/infrastructure/persistence/postgresql/include/: async_connection_pool.h  db_error.h  pq_connection.h
UserService/infrastructure/persistence/postgresql/old_version/v01/: old_async_conn_pool.cc  old_async_conn_pool.h
UserService/infrastructure/persistence/postgresql/old_version/v2/: old_async_conn_pool.cc  old_async_conn_pool.h
UserService/infrastructure/persistence/postgresql/src/: async_connection_pool.cc  pq_connection.cc
UserService/infrastructure/redis/include/: verification_code_repository.h
UserService/infrastructure/redis/src/: verification_code_repository.cc
UserService/infrastructure/state_storage/redis/: redis_client.cc  redis_client.h
UserService/infrastructure/state_storage/redis_dao/: redis_client.cc  redis_client.h
UserService/model/: user.cc  user.h
UserService/server/: application.cc  application.h  user_service_server.cc  user_service_server.h
UserService/service/include/: auth_service.h  basic_user_service.h
UserService/service/interface/: i_auth_service.h  i_basic_user_service.h
UserService/service/model/: auth_model.h  basic_user_model.h  common_model.h
UserService/service/src/: auth_service.cc  basic_user_service.cc
UserService/service_registry/include/: consul_registry.h  k8s_registry.h
UserService/service_registry/interface/: service_registry.h
UserService/service_registry/src/: consul_registry.cc  k8s_registry.cc
UserService/utils/include/: code_generator.h  id_generator.h  jwt_util.h  security_util.h  verification_code_generator.h
UserService/utils/interface/: i_code_generator.h  i_id_generator.h  i_jwt_util.h  i_security_util.h  i_verification_code_generator.h
UserService/utils/src/: code_generator.cc  id_generator.cc  jwt_util.cc  security_util.cc  verification_code_generator.cc
apiGateway/: README.md  envoy.yaml  proto.pb
envBuild/: Readme.md
envBuild/v1/: Readme.md  docker-compose.yml  dockerfile
envBuild/v2/: Readme.md
perf_data/: perf.data
tools/: pack_project.py
